--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@inquirer/password": "^4.0.2",
+    "@lukso/lsp-smart-contracts": "^0.16.3",
     "@openzeppelin/contracts": "~5.0.2",
     "@typechain/ethers-v6": "~0.5.1",
     "dotenv": "~16.4.5",
